# sip-to-ai

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/ai/: grok_voice.py  openai_realtime.py
docs/superpowers/plans/: 2026-05-04-grok-voice-agent.md
docs/superpowers/specs/: 2026-05-04-grok-voice-agent-design.md
scripts/: check_openai_realtime_access.py
tests/: test_grok_voice.py  test_openai_config.py
